syntax = "proto3";

package flowproto;
option go_package = "./flowpb";

service FlowService {
  rpc Create (FlowCreateRequest) returns (FlowCreateRespond);
  rpc Save (FlowSaveRequest) returns (FlowSaveRespond);
  rpc Load  (FlowLoadRequest) returns (FlowLoadRespond);
  rpc Delete (FlowDeleteRequest) returns (FlowDeleteRespond);
}

// Requests 

message FlowCreateRequest {
  string name = 1;
}

message FlowSaveRequest {
  string id = 1;
  string name = 2;
  bytes data = 3;
}

message FlowLoadRequest {
  string name = 1;
}

message FlowDeleteRequest {
  string id = 1;
}

// Responses

message FlowCreateRespond {
  string id = 1;
}

message FlowSaveRespond {
}

message FlowLoadRespond {
  string id = 1;
  string name = 2;
  bytes data = 3;
}

message FlowDeleteRespond {
}
